spacing fixes

--- a/src/app/components/css/TokenInfo.css
+++ b/src/app/components/css/TokenInfo.css
@@ -28,12 +28,12 @@
     width: 100px;
 }
 
-.typography {
+.typography_token_info {
     padding-top: 20px;
     color: #282b2d !important;
 }
 
-.typography_error {
+.typography_token_info_error {
     padding-top: 20px;
     color: #df3a31 !important;
 }
